--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -2,3 +2,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.global-transition {
+    @apply transition-all duration-300 ease-in-out;
+}
